--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 #Navbar{
     width: 75%;
     margin-left: 16%;
@@ -8,4 +9,9 @@
     width: 81%;
     margin-top: 6%;
     margin-left: 18%;
+}
+.Footer{
+    width: 85%;
+    margin-left: 15%;
+    padding-left: 2%;
 }
